--- a/2005/delfols.vcproj
+++ b/2005/delfols.vcproj
@@ -164,6 +164,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
+				CommandLine="copy $(ProjectDir)\..\delfols\config.ini $(TargetDir)"
 			/>
 		</Configuration>
 	</Configurations>
@@ -187,6 +188,10 @@
 		<AssemblyReference
 			RelativePath="System.XML.dll"
 			AssemblyName="System.Xml, Version=2.0.0.0, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL"
+		/>
+		<AssemblyReference
+			RelativePath="..\..\..\..\..\..\LinkOut\DNAssembly\WProfile.dll"
+			AssemblyName="WProfile, Version=1.1.4269.17767, processorArchitecture=IA64"
 		/>
 	</References>
 	<Files>
@@ -266,6 +271,10 @@
 				>
 			</File>
 		</Filter>
+		<File
+			RelativePath="..\delfols\config.ini"
+			>
+		</File>
 		<File
 			RelativePath="..\delfols\ReadMe.txt"
 			>
