--- a/delfols/config.ini
+++ b/delfols/config.ini
@@ -1,5 +1,8 @@
 [dirs]
 dir=${LocalApplicationData}\..\Temp
+dir=${LocalApplicationData}\Temp
+dir=${%Tmp%}\
+dir=${%Temp%}\
 dir=${InternetCache}
 dir=${LocalApplicationData}\Microsoft\VCExpress\8.0\ProjectAssemblies
 dir=${LocalApplicationData}\Opera\Opera\cache\
