--- a/delfols/config.ini
+++ b/delfols/config.ini
@@ -1,9 +1,9 @@
 [dirs]
-dir=${LocalApplicationData}\..\Temp
-dir=${LocalApplicationData}\Temp
+dir=${LocalApplicationData}\..\Temp\
+dir=${LocalApplicationData}\Temp\
 dir=${%Tmp%}\
 dir=${%Temp%}\
-dir=${InternetCache}
-dir=${LocalApplicationData}\Microsoft\VCExpress\8.0\ProjectAssemblies
+dir=${InternetCache}\
+dir=${LocalApplicationData}\Microsoft\VCExpress\8.0\ProjectAssemblies\
 dir=${LocalApplicationData}\Opera\Opera\cache\
-dir=${LocalApplicationData}\Mozilla\Firefox\Profiles\73qxz66g.default\Cache\
+dir=${LocalApplicationData}\Mozilla\Firefox\Profiles\
