--- a/delfols/config.ini
+++ b/delfols/config.ini
@@ -1,4 +1,5 @@
-[dirs]
+﻿[dirs]
+dir=${Recent}\
 dir=${LocalApplicationData}\..\Temp\
 dir=${LocalApplicationData}\Temp\
 dir=${%Tmp%}\
@@ -7,3 +8,6 @@ dir=${InternetCache}\
 dir=${LocalApplicationData}\Microsoft\VCExpress\8.0\ProjectAssemblies\
 dir=${LocalApplicationData}\Opera\Opera\cache\
 dir=${LocalApplicationData}\Mozilla\Firefox\Profiles\
+dir=C:\$Recycle.Bin\
+dir=P:\$Recycle.Bin
+dir=P:\リンク
