--- a/delfols/config.ini
+++ b/delfols/config.ini
@@ -11,3 +11,6 @@ dir=${LocalApplicationData}\Mozilla\Firefox\Profiles\
 dir=C:\$Recycle.Bin\
 dir=P:\$Recycle.Bin
 dir=P:\リンク
+dir=C:\RECYCLER
+dir=Z:\RECYCLER
+dir=P:\RECYCLER
