--- a/2008/delfols.vcproj
+++ b/2008/delfols.vcproj
@@ -195,8 +195,8 @@
 			MinFrameworkVersion="131072"
 		/>
 		<AssemblyReference
-			RelativePath="..\..\..\..\..\..\Linkout\DNAssembly\Profile.dll"
-			AssemblyName="Profile, Version=1.0.0.0, processorArchitecture=MSIL"
+			RelativePath="..\..\..\..\..\..\Linkout\DNAssembly\Ambiesoft.Profile.dll"
+			AssemblyName="Ambiesoft.Profile, Version=1.0.0.0, processorArchitecture=MSIL"
 			MinFrameworkVersion="131072"
 		/>
 	</References>
