--- a/2005/delfols.vcproj
+++ b/2005/delfols.vcproj
@@ -41,6 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
+				AdditionalIncludeDirectories="L:\MSSDK\2003\include"
 				PreprocessorDefinitions="WIN32;_DEBUG"
 				RuntimeLibrary="3"
 				UsePrecompiledHeader="2"
@@ -60,6 +61,7 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="$(NoInherit)"
 				LinkIncremental="2"
+				AdditionalLibraryDirectories="L:\MSSDK\2003\Lib"
 				GenerateDebugInformation="true"
 				AssemblyDebug="1"
 				SubSystem="2"
@@ -94,7 +96,7 @@
 		</Configuration>
 		<Configuration
 			Name="Release|Win32"
-			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
+			OutputDirectory="..\..\..\..\..\..\Linkout\delfols"
 			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="1"
 			CharacterSet="1"
@@ -118,6 +120,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
+				AdditionalIncludeDirectories="L:\MSSDK\2003\include"
 				PreprocessorDefinitions="WIN32;NDEBUG"
 				RuntimeLibrary="2"
 				UsePrecompiledHeader="2"
@@ -137,6 +140,7 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="$(NoInherit)"
 				LinkIncremental="1"
+				AdditionalLibraryDirectories="L:\MSSDK\2003\Lib"
 				GenerateDebugInformation="true"
 				SubSystem="2"
 				EntryPointSymbol="main"
@@ -187,8 +191,8 @@
 			AssemblyName="System.Xml, Version=2.0.0.0, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL"
 		/>
 		<AssemblyReference
-			RelativePath="..\..\..\..\..\..\LinkOut\DNAssembly\Profile.dll"
-			AssemblyName="Profile, Version=1.0.0.0, processorArchitecture=MSIL"
+			RelativePath="..\..\..\..\..\..\Linkout\DNAssembly\Ambiesoft.Profile.dll"
+			AssemblyName="Ambiesoft.Profile, Version=1.0.0.0, processorArchitecture=MSIL"
 		/>
 	</References>
 	<Files>
@@ -207,6 +211,38 @@
 			</File>
 			<File
 				RelativePath="..\delfols\FormMain.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\MyUtility\getStdString.net.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\delfols\helper.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\delfols\noStdafxHelper.cpp"
+				>
+				<FileConfiguration
+					Name="Debug|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						UsePrecompiledHeader="0"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						UsePrecompiledHeader="0"
+					/>
+				</FileConfiguration>
+			</File>
+			<File
+				RelativePath="..\..\MyUtility\StartProcess.cpp"
 				>
 			</File>
 			<File
@@ -246,7 +282,23 @@
 				</File>
 			</File>
 			<File
+				RelativePath="..\..\MyUtility\getStdString.net.h"
+				>
+			</File>
+			<File
+				RelativePath="..\delfols\helper.h"
+				>
+			</File>
+			<File
+				RelativePath="..\delfols\noStdafxHelper.h"
+				>
+			</File>
+			<File
 				RelativePath="..\delfols\resource.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\MyUtility\StartProcess.h"
 				>
 			</File>
 			<File
