git-svn-id: svn://192.168.0.99/delfols@6806 5ada3c48-002d-0410-850d-99865cc6fd0f

--- a/2008/delfols.vcproj
+++ b/2008/delfols.vcproj
@@ -199,6 +199,11 @@
 			AssemblyName="Ambiesoft.Profile, Version=1.0.0.0, processorArchitecture=MSIL"
 			MinFrameworkVersion="131072"
 		/>
+		<AssemblyReference
+			RelativePath="..\..\..\..\..\..\Linkout\DNAssembly\CenterWinDialog.dll"
+			AssemblyName="CenterWinDialog, Version=1.0.0.0, processorArchitecture=MSIL"
+			MinFrameworkVersion="131072"
+		/>
 	</References>
 	<Files>
 		<Filter
