git-svn-id: svn://192.168.0.99/delfols@6807 5ada3c48-002d-0410-850d-99865cc6fd0f

--- a/2005/delfols.vcproj
+++ b/2005/delfols.vcproj
@@ -194,6 +194,10 @@
 			RelativePath="..\..\..\..\..\..\Linkout\DNAssembly\Ambiesoft.Profile.dll"
 			AssemblyName="Ambiesoft.Profile, Version=1.0.0.0, processorArchitecture=MSIL"
 		/>
+		<AssemblyReference
+			RelativePath="..\..\..\..\..\..\Linkout\DNAssembly\CenterWinDialog.dll"
+			AssemblyName="CenterWinDialog, Version=1.0.0.0, processorArchitecture=MSIL"
+		/>
 	</References>
 	<Files>
 		<Filter
