git-svn-id: svn://192.168.0.99/delfols@6808 5ada3c48-002d-0410-850d-99865cc6fd0f

--- a/delfols/config.ini
+++ b/delfols/config.ini
@@ -1,5 +1,6 @@
 ﻿[dirs]
-dir=C:\T\JC
+dir=C:\LegacyPrograms\IronPortable\Profile\Default\Cache
+dir=C:\LegacyPrograms\IronPortable\Profile\Default\File System
 dir=${Recent}\
 dir=${LocalApplicationData}\..\Temp\
 dir=${LocalApplicationData}\Temp\
@@ -9,6 +10,7 @@ dir=${InternetCache}\
 dir=${LocalApplicationData}\Microsoft\VCExpress\8.0\ProjectAssemblies\
 dir=${LocalApplicationData}\Opera\Opera\cache\
 dir=${LocalApplicationData}\Mozilla\Firefox\Profiles\
+dir=${LocalApplicationData}\Google\Chrome\User Data\Default\Cache
 dir=C:\$Recycle.Bin\
 dir=P:\$Recycle.Bin
 dir=P:\リンク
