--- a/2008/delfols.vcproj
+++ b/2008/delfols.vcproj
@@ -224,7 +224,7 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\MyUtility\getStdString.net.cpp"
+				RelativePath="..\..\lsMisc\getStdString.net.cpp"
 				>
 			</File>
 			<File
@@ -252,7 +252,7 @@
 				</FileConfiguration>
 			</File>
 			<File
-				RelativePath="..\..\MyUtility\StartProcess.cpp"
+				RelativePath="..\..\lsMisc\StartProcess.cpp"
 				>
 			</File>
 			<File
@@ -292,7 +292,7 @@
 				</File>
 			</File>
 			<File
-				RelativePath="..\..\MyUtility\getStdString.net.h"
+				RelativePath="..\..\lsMisc\getStdString.net.h"
 				>
 			</File>
 			<File
@@ -308,7 +308,7 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\MyUtility\StartProcess.h"
+				RelativePath="..\..\lsMisc\StartProcess.h"
 				>
 			</File>
 			<File
