--- a/2010/delfols.vcxproj.filters
+++ b/2010/delfols.vcxproj.filters
@@ -39,6 +39,12 @@
     <ClCompile Include="..\delfols\stdafx.cpp">
       <Filter>2 Source</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\lsMisc\SHMoveFile.cpp">
+      <Filter>2 Source</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\lsMisc\GetLastErrorString.cpp">
+      <Filter>2 Source</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\delfols\FormMain.h">
@@ -60,6 +66,12 @@
       <Filter>1 Header</Filter>
     </ClInclude>
     <ClInclude Include="..\delfols\stdafx.h">
+      <Filter>1 Header</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\lsMisc\SHMoveFile.h">
+      <Filter>1 Header</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\lsMisc\GetLastErrorString.h">
       <Filter>1 Header</Filter>
     </ClInclude>
   </ItemGroup>
