--- a/2010/delfols.vcxproj
+++ b/2010/delfols.vcxproj
@@ -220,6 +220,7 @@
       </PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="..\..\lsMisc\StartProcess.cpp" />
+    <ClCompile Include="..\delfols\StartDeleteDialog.cpp" />
     <ClCompile Include="..\delfols\stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
@@ -235,9 +236,13 @@
     </ClInclude>
     <ClInclude Include="..\..\lsMisc\getStdString.net.h" />
     <ClInclude Include="..\delfols\helper.h" />
+    <ClInclude Include="..\delfols\LogInfo.h" />
     <ClInclude Include="..\delfols\noStdafxHelper.h" />
     <ClInclude Include="..\delfols\resource.h" />
     <ClInclude Include="..\..\lsMisc\StartProcess.h" />
+    <ClInclude Include="..\delfols\StartDeleteDialog.h">
+      <FileType>CppForm</FileType>
+    </ClInclude>
     <ClInclude Include="..\delfols\stdafx.h" />
   </ItemGroup>
   <ItemGroup>
@@ -252,6 +257,9 @@
     <EmbeddedResource Include="..\delfols\FormMain.resX">
       <DependentUpon>FormMain.h</DependentUpon>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="..\delfols\StartDeleteDialog.resx">
+      <DependentUpon>StartDeleteDialog.h</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
