--- a/2013/delfols.vcxproj.filters
+++ b/2013/delfols.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClCompile Include="..\..\lsMisc\GetLastErrorString.cpp">
       <Filter>2 Source</Filter>
     </ClCompile>
+    <ClCompile Include="..\delfols\FormMainInitializeComponent.cpp">
+      <Filter>2 Source</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\delfols\FormMain.h">
@@ -87,6 +90,12 @@
       <Filter>1 Header</Filter>
     </ClInclude>
     <ClInclude Include="..\delfols\LogInfo.h">
+      <Filter>1 Header</Filter>
+    </ClInclude>
+    <ClInclude Include="..\delfols\LogListView.h">
+      <Filter>1 Header</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\lsMisc\ReentBlocker.h">
       <Filter>1 Header</Filter>
     </ClInclude>
   </ItemGroup>
