--- a/2017/delfols.vcxproj.filters
+++ b/2017/delfols.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="..\..\lsMisc\GetLastErrorString.cpp">
       <Filter>2 Source</Filter>
     </ClCompile>
+    <ClCompile Include="..\delfols\FormMainInitializeComponent.cpp">
+      <Filter>2 Source</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\delfols\FormMain.h">
@@ -78,6 +81,9 @@
       <Filter>1 Header</Filter>
     </ClInclude>
     <ClInclude Include="..\..\lsMisc\GetLastErrorString.h">
+      <Filter>1 Header</Filter>
+    </ClInclude>
+    <ClInclude Include="..\delfols\LogListView.h">
       <Filter>1 Header</Filter>
     </ClInclude>
   </ItemGroup>
