--- a/delfols/config.ini
+++ b/delfols/config.ini
@@ -1,4 +1,6 @@
 ﻿[dirs]
+dir=C:\Users\fVfsr\AppData\Local\Google\Chrome\*\Default\Cache\
+dir=C:\Users\fVfsr\AppData\Local\Google\Chrome\*\Default\Media Cache\
 dir=C:\LegacyPrograms\IronPortable\Profile\Default\Cache
 dir=C:\LegacyPrograms\IronPortable\Profile\Default\File System
 dir=${Recent}\
